classDiagram
  direction LR
  class GameState {
    +seed : number
    +depth : number
    +dungeon : Dungeon
    +base : HeroStats
    +level : number
    +xp : number
    +player : Point
    +hp : number
    +defense : number
    +gold : number
    +inventory : InventoryItem[]
    +equipment : Equipment
    +nextItemId : number
    +floorItems : FloorItem[]
    +enemies : Enemy[]
    +status : GameStatus
    +kills : number
    +turns : number
    +revealedRooms : number[]
    +log : LogEntry[]
    +nextLogId : number
    +effects : CombatFloat[]
    +projectiles : Projectile[]
    +fadingEnemies : Enemy[]
    +shopping : boolean
    +shopStock : ShopItem[]
    +nextEffectId : number
    +rngState : number
    +aiming : boolean
    +targetId : number / null
    +seen : boolean[][]
  }
  class GameAction {
    <<union>>
    configure
    reset
    start
    move
    disarm
    descend
    equip
    drink
    drop
    aimStart
    aimCycle
    aimCancel
    fire
    buy
    sell
    closeShop
  }
  class HeroStats {
    <<external>>
  }
  class Dungeon {
    <<external>>
  }
  class Point {
    <<external>>
  }
  class InventoryItem {
    <<external>>
  }
  class Equipment {
    <<external>>
  }
  class FloorItem {
    <<external>>
  }
  class Enemy {
    <<external>>
  }
  class GameStatus {
    <<external>>
  }
  class LogEntry {
    <<external>>
  }
  class CombatFloat {
    <<external>>
  }
  class Projectile {
    <<external>>
  }
  class ShopItem {
    <<external>>
  }
  class Direction {
    <<external>>
  }
  HeroStats <|-- GameState
  GameState --> Dungeon : dungeon
  GameState --> HeroStats : base
  GameState --> Point : player
  GameState --> InventoryItem : inventory
  GameState --> Equipment : equipment
  GameState --> FloorItem : floorItems
  GameState --> Enemy : enemies, fadingEnemies
  GameState --> GameStatus : status
  GameState --> LogEntry : log
  GameState --> CombatFloat : effects
  GameState --> Projectile : projectiles
  GameState --> ShopItem : shopStock
  GameAction --> HeroStats
  GameAction --> Direction
